--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <header class="cabezote">
+      <img class="menu" src="images/menu.png" />
       <a href="index.html">
         <img alt="logo peach" class="logo" src="images/logo.png" />
       </a>
